@@ -20,6 +20,8 @@ Version history:
 - support exceptions for setup functions, object creation and destruction, method handling
 - small fixes for MSVC6 incompatibilites
 - fixes for Max 4.5 headers
+- removed Mach-O/CFM glue stuff again....Max has gone Mach-O in the meantime...
+- in flext::StopThread don't wait for thread to have stopped!
 
 0.4.6:
 - added a text edit window for list attributes
